# cognito

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: download_trainig_dataset.ps1
src/: config.rs  data.rs  inference.rs  main.rs  model.rs  train.rs
